[package]
name = "trk"
description = "Simple terminal-based time-series data recorder and plotter."
version = "0.1.2"
authors = ["Cameron Daniel <cam.daniel@gmail.com>"]
repository = "https://github.com/ccakes/trk"
readme = "README.md"
license = "MIT"

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
structopt = "0.2"

rusqlite = "0.15"
# textplots = "0.3"
textplots = { git = "https://github.com/ccakes/textplots-rs" }
termion = "1"
read_input = "0.5.2"
prettytable-rs = "^0.8"
